Upload All Data Complete

--- a/app/src/main/res/layout/activity_girl_input.xml
+++ b/app/src/main/res/layout/activity_girl_input.xml
@@ -9,7 +9,7 @@
 
     <ImageView
             android:layout_width="224dp"
-            android:layout_height="180dp" app:srcCompat="@drawable/female" android:id="@+id/imageView2"
+            android:layout_height="180dp" app:srcCompat="@drawable/female" android:id="@+id/img_p_upload"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
