--- a/app/src/main/res/layout/activity_girl_input.xml
+++ b/app/src/main/res/layout/activity_girl_input.xml
@@ -98,4 +98,11 @@
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.448" app:layout_constraintVertical_bias="0.976"
             android:textSize="18sp" android:textAlignment="center"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_height="150dp"
+            android:layout_width="150dp" app:layout_constraintEnd_toEndOf="@+id/img_p_upload"
+            app:layout_constraintBottom_toBottomOf="@+id/img_p_upload"
+            app:layout_constraintStart_toStartOf="@+id/img_p_upload"
+            app:layout_constraintTop_toTopOf="@+id/img_p_upload" android:id="@+id/after_image_select"
+            android:rotation="270"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
