--- a/app/src/main/res/layout/patien_c_patien.xml
+++ b/app/src/main/res/layout/patien_c_patien.xml
@@ -8,13 +8,20 @@
 
     <TextView
             android:text="TextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content" android:id="@+id/name_text" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
+            android:layout_width="87dp"
+            android:layout_height="21dp" android:id="@+id/lastname_text"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/name_text"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.314"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="100dp"
+            android:layout_height="19dp" android:id="@+id/name_text"
             app:layout_constraintStart_toEndOf="@+id/image_list"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="68dp"
             app:layout_constraintBottom_toBottomOf="@+id/image_list" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/image_list" app:layout_constraintVertical_bias="0.382"
+            app:layout_constraintTop_toTopOf="@+id/image_list" app:layout_constraintVertical_bias="0.423"
             android:textColor="#000000"/>
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="77dp"
