--- a/app/src/main/res/layout/activity_girl_input.xml
+++ b/app/src/main/res/layout/activity_girl_input.xml
@@ -72,7 +72,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
-            android:id="@+id/address_patient" android:layout_marginEnd="8dp"
+            android:id="@+id/address_patient2" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
