--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,40 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity"
+        android:background="@drawable/p1">
 
     <ImageView
-            android:layout_width="238dp"
-            android:layout_height="201dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView4"
+            android:layout_width="113dp"
+            android:layout_height="171dp" app:srcCompat="@drawable/logo" android:id="@+id/imageView4"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.19" app:layout_constraintHorizontal_bias="0.496"/>
+            app:layout_constraintVertical_bias="0.147"/>
+    <ImageView
+            android:layout_width="335dp"
+            android:layout_height="68dp" app:srcCompat="@drawable/but2" android:id="@+id/imageView3"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.66" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.441"/>
+    <ImageView
+            android:layout_width="335dp"
+            android:layout_height="68dp" app:srcCompat="@drawable/but" android:id="@+id/imageView8"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.19" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.441"/>
+    <ImageView
+            android:layout_width="335dp"
+            android:layout_height="68dp" app:srcCompat="@drawable/but" android:id="@+id/imageView7"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.441"/>
     <EditText
             android:layout_width="270dp"
             android:layout_height="60dp"
@@ -23,35 +48,40 @@
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp" android:layout_marginStart="8dp"
-            android:hint="อีเมล"/>
+            android:hint="E-mail" app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintVertical_bias="0.412"/>
     <EditText
             android:layout_width="270dp"
             android:layout_height="60dp"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/pass_login" app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/pass_login"
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.62"
-            android:hint="รหัสผ่าน"/>
+            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.012"
+            android:hint="Password" app:layout_constraintTop_toBottomOf="@+id/mail_login"
+            app:layout_constraintHorizontal_bias="0.496"/>
     <TextView
-            android:text="เข้าสู่ระบบ"
+            android:text="LOGIN"
             android:layout_width="214dp"
             android:layout_height="56dp" android:id="@+id/login_btn" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="80dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="80dp" android:layout_marginTop="80dp" android:layout_marginStart="80dp"
-            android:textSize="28sp" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.162"
-            app:layout_constraintVertical_bias="0.963"/>
+            android:textSize="28sp" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.486"
+            app:layout_constraintVertical_bias="0.891" android:textColor="#1F1D1D"/>
     <TextView
-            android:text="ยังไม่มีบัญชีผู้ใช้?  สมัครเข้าใช้งาน"
+            android:text="ยังไม่มีบัญชีผู้ใช้?  ลงทะเบียน"
+            android:autoSizeTextType="uniform"
             android:layout_width="294dp"
+
             android:layout_height="50dp" android:id="@+id/register" android:layout_marginBottom="80dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="80dp" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="80dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="80dp" app:layout_constraintVertical_bias="0.823" android:textSize="14sp"
-            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.511"/>
+            android:layout_marginStart="80dp" app:layout_constraintVertical_bias="0.666" android:textSize="14sp"
+            android:textAlignment="center" app:layout_constraintHorizontal_bias="0.511"
+            android:textColorHint="#000A0A0A" android:textColor="#B5303131"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
