--- a/app/src/main/res/layout/activity_register_acc.xml
+++ b/app/src/main/res/layout/activity_register_acc.xml
@@ -5,8 +5,66 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Register_acc">
+        tools:context=".Register_acc"
+        android:background="@drawable/p2">
 
+    <ImageView
+            android:layout_width="302dp"
+            android:layout_height="48dp" app:srcCompat="@drawable/but3" android:id="@+id/imageView6"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.149" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <ImageView
+            android:layout_width="302dp"
+            android:layout_height="48dp" app:srcCompat="@drawable/but3" android:id="@+id/imageView10"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.232" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <ImageView
+            android:layout_width="156dp"
+            android:layout_height="39dp" app:srcCompat="@drawable/but4" android:id="@+id/imageView15"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.309" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.211"/>
+    <ImageView
+            android:layout_width="302dp"
+            android:layout_height="48dp" app:srcCompat="@drawable/but3" android:id="@+id/imageView11"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.635" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <ImageView
+            android:layout_width="302dp"
+            android:layout_height="48dp" app:srcCompat="@drawable/but3" android:id="@+id/imageView13"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.736" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <ImageView
+            android:layout_width="302dp"
+            android:layout_height="48dp" app:srcCompat="@drawable/but3" android:id="@+id/imageView12"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.54" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <ImageView
+            android:layout_width="302dp"
+            android:layout_height="48dp" app:srcCompat="@drawable/but3" android:id="@+id/imageView9"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.057" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"/>
+    <ImageView
+            android:layout_width="335dp"
+            android:layout_height="68dp" app:srcCompat="@drawable/but5" android:id="@+id/imageView14"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView4"
+            android:layout_marginBottom="72dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.66" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.441"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -91,13 +149,15 @@
             android:hint="รหัสผ่าน" app:layout_constraintTop_toBottomOf="@+id/mail_regis"/>
     <TextView
             android:text="สมัครบัญชีผู้ใช้"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/submit_btn"
+            android:layout_width="317dp"
+            android:textAlignment="center"
+            android:layout_height="34dp" android:id="@+id/submit_btn"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             android:layout_marginStart="8dp" android:textSize="24sp" app:layout_constraintVertical_bias="0.416"
-            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintTop_toBottomOf="@+id/pass_regis"/>
+            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintTop_toBottomOf="@+id/pass_regis"
+            android:textColor="#1A1A1B"/>
 
     <RadioGroup
             android:layout_width="207dp"
